# codewars_solutions

v0.1+v1/a-plus-b-plus-c-equals-a-plus-b-plus-c-prove-it[5c2fcbcba305ad2c4a91122d]/haskell/: a-plus-b-plus-c-equals-a-plus-b-plus-c-prove-it.cabal
v0.1+v1/a-plus-b-plus-c-equals-a-plus-b-plus-c-prove-it[5c2fcbcba305ad2c4a91122d]/haskell/src/Kata/: AdditionAssoc.hs
v0.1+v1/a-plus-b-plus-c-equals-a-plus-b-plus-c-prove-it[5c2fcbcba305ad2c4a91122d]/haskell/test/sample/: Main.hs
v0.1+v1/a-star-b-equals-b-star-a-prove-it[5c302f562f6fe300155a1933]/haskell/: a-star-b-equals-b-star-a-prove-it.cabal
v0.1+v1/a-star-b-equals-b-star-a-prove-it[5c302f562f6fe300155a1933]/haskell/src/Kata/: TimesComm.hs
v0.1+v1/a-star-b-equals-b-star-a-prove-it[5c302f562f6fe300155a1933]/haskell/test/sample/: Main.hs
v0.1+v1/alphabetic-anagrams[53e57dada0cb0400ba000688]/haskell-intmap/: challenge.cabal
v0.1+v1/alphabetic-anagrams[53e57dada0cb0400ba000688]/haskell-intmap/src/: AlphabeticAnagrams.hs
v0.1+v1/alphabetic-anagrams[53e57dada0cb0400ba000688]/haskell-intmap/test/sample/: AlphabeticAnagramsSpec.hs  Main.hs
v0.1+v1/bagels[54bd6b4c956834c9870001a1]/: info.json  (+2 more)
v0.1+v1/become-immortal[59568be9cc15b57637000054]/haskell/: become-immortal.cabal
v0.1+v1/become-immortal[59568be9cc15b57637000054]/haskell/src/Become/: Immortal.hs
v0.1+v1/become-immortal[59568be9cc15b57637000054]/haskell/test/custom/: Main.hs
v0.1+v1/become-immortal[59568be9cc15b57637000054]/haskell/test/sample/: Main.hs
v0.1+v1/constructing-finite-fields-using-binary-polynoms[54f1b7b3f58ba8ee720005a8]/haskell-vec/: constructing-finite-fields-using-binary-polynoms.cabal
v0.1+v1/constructing-finite-fields-using-binary-polynoms[54f1b7b3f58ba8ee720005a8]/haskell-vec/src/: PolynomField.hs
v0.1+v1/constructing-finite-fields-using-binary-polynoms[54f1b7b3f58ba8ee720005a8]/haskell-vec/test/sample/: PolynomFieldSpec.hs
v0.1+v1/coroutines[547a77a6b84a1fb8bf000211]/haskell/: coroutines.cabal
v0.1+v1/coroutines[547a77a6b84a1fb8bf000211]/haskell/src/: Coroutine.hs  Preloaded.hs
v0.1+v1/coroutines[547a77a6b84a1fb8bf000211]/haskell/test/sample/: CoroutineSpec.hs  Main.hs
v0.1+v1/count-them-all[5b1bdc2bccef79e948000086]/haskell/: count-them-all.cabal
v0.1+v1/count-them-all[5b1bdc2bccef79e948000086]/haskell/src/: Counting.hs
v0.1+v1/count-them-all[5b1bdc2bccef79e948000086]/haskell/src/Counting/: Preloaded.hs
v0.1+v1/count-them-all[5b1bdc2bccef79e948000086]/haskell/test/sample/: CountingSpec.hs  Main.hs
v0.1+v1/data-types-a-la-carte[54808fc8ab03a23e82000a1f]/haskell/: challenge.cabal
v0.1+v1/data-types-a-la-carte[54808fc8ab03a23e82000a1f]/haskell/src/: ALaCarte.hs
v0.1+v1/data-types-a-la-carte[54808fc8ab03a23e82000a1f]/haskell/test/sample/: ALaCarteSpec.hs  Main.hs
v0.1+v1/evaluate-mathematical-expression[52a78825cdfc2cfc87000005]/haskell/: challenge.cabal
v0.1+v1/evaluate-mathematical-expression[52a78825cdfc2cfc87000005]/haskell/src/: EvaluateMathematicalExpression.hs
v0.1+v1/evaluate-mathematical-expression[52a78825cdfc2cfc87000005]/haskell/test/sample/: EvaluateMathematicalExpressionSpec.hs  Main.hs
v0.1+v1/explosive-sum[52ec24228a515e620b0005ef]/haskell/: explosive-sum.cabal
v0.1+v1/explosive-sum[52ec24228a515e620b0005ef]/haskell/src/: ExplosiveSum.hs
v0.1+v1/expression-transpiler[597ccf7613d879c4cb00000f]/haskell/: expression-transpiler.cabal
v0.1+v1/expression-transpiler[597ccf7613d879c4cb00000f]/haskell/src/: Transpiler.hs
v0.1+v1/expression-transpiler[597ccf7613d879c4cb00000f]/haskell/test/sample/: Main.hs  TranspilerSpec.hs
v0.1+v1/faberge-easter-eggs-crush-test-linear[5976c5a5cd933a7bbd000029]/haskell/: faberge-easter-eggs-crush-test-linear.cabal
v0.1+v1/faberge-easter-eggs-crush-test-linear[5976c5a5cd933a7bbd000029]/haskell/src/: Faberge.hs
v0.1+v1/huffman-encoding[54cf7f926b85dcc4e2000d9d]/haskell/: challenge.cabal
v0.1+v1/huffman-encoding[54cf7f926b85dcc4e2000d9d]/haskell/src/: Huffman.hs
v0.1+v1/lambda-calculus-lists-as-folds-ii[60b76ecdbec5c4003163f869]/haskell/: lambda-calculus-lists-as-folds-ii.cabal
v0.1+v1/lambda-calculus-lists-as-folds-ii[60b76ecdbec5c4003163f869]/haskell/src/: ListsAsFolds.hs  Preloaded.hs
v0.1+v1/move-to-front-encoding[54ce6115975ca685dd0005d5]/haskell-tailrec/: challenge.cabal
v0.1+v1/move-to-front-encoding[54ce6115975ca685dd0005d5]/haskell-tailrec/src/: MTF.hs
v0.1+v1/odd-plus-even-equals-odd-prove-it[599d973255342a0ce400009b]/haskell/: challenge.cabal
v0.1+v1/odd-plus-even-equals-odd-prove-it[599d973255342a0ce400009b]/haskell/src/: OddsAndEvens.hs
v0.1+v1/peano-and-church[5922530af9c157651d0000aa]/haskell/: challenge.cabal
v0.1+v1/peano-and-church[5922530af9c157651d0000aa]/haskell/src/: PC.hs
v0.1+v1/recurrence-relations[550756a881b8bdba99000348]/haskell/: recurrence-relations.cabal
v0.1+v1/recurrence-relations[550756a881b8bdba99000348]/haskell/src/: FunctionEvaluator.hs
v0.1+v1/smallest-possible-sum[52f677797c461daaf7000740]/haskell/: challenge.cabal
v0.1+v1/sure-but-can-you-ski-i[5a02dccf32b8b988120000da]/haskell/: sure-but-can-you-ski-i.cabal
v0.1+v1/sure-but-can-you-ski-i[5a02dccf32b8b988120000da]/haskell/src/: Combinators.hs  PredefinedCombinators.hs
v0.1+v1/the-millionth-fibonacci-kata[53d40c1e2f13e331fc000c26]/haskell/: challenge.cabal
v0.1+v1/the-millionth-fibonacci-kata[53d40c1e2f13e331fc000c26]/haskell/src/: Fibonacci.hs
v0.1+v1/the-most-untyped-typed-language[5e924bda0a365a0033b12782]/haskell/: the-most-untyped-typed-language.cabal
v0.1+v1/the-most-untyped-typed-language[5e924bda0a365a0033b12782]/haskell/src/: Untyped.hs
v0.1+v1/the-position-of-a-digital-string-in-a-infinite-digital-string[582c1092306063791c000c00]/haskell/: the-position-of-a-digital-string-in-a-infinite-digital-string.cabal
v0.1+v1/the-position-of-a-digital-string-in-a-infinite-digital-string[582c1092306063791c000c00]/haskell/src/: InfiniteDigitalString.hs
v0.1+v1/tiny-three-pass-compiler[5265b0885fda8eac5900093b]/haskell/: challenge.cabal
v0.1+v1/tiny-three-pass-compiler[5265b0885fda8eac5900093b]/haskell/src/: TinyThreePassCompiler.hs
(+703 files in other folders)
