cabal-version: 3.0
name:          a-star-b-equals-b-star-a-prove-it
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:
        Kata.TimesComm
        Kata.TimesComm.Definitions

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base >=4.18.2 && <4.19

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    Kata.TimesComm.TestSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11 && <2.12,
        a-star-b-equals-b-star-a-prove-it
