cabal-version: 3.0
name:          explosive-sum
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  ExplosiveSum
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18,
        vector >=0.13.1 && <0.14

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    ExplosiveSumSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11.9 && <2.12,
        explosive-sum
