cabal-version: 3.0
name:          expression-transpiler
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  Transpiler
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.18.2 && <4.19,
        text >=2.0.2 && <2.1,
        vector >=0.13.1 && <0.14,
        attoparsec >=0.14.4 && <0.15

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    TranspilerSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11.9 && <2.12,
        expression-transpiler
