cabal-version: 3.0
name:          faberge-easter-eggs-crush-test-linear
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  Faberge
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.18.2 && <4.19,
        vector >=0.13.1 && <0.14

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    FabergeSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11 && <2.12,
        faberge-easter-eggs-crush-test-linear

test-suite full
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/full
    other-modules:    FabergeSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11 && <2.12,
        QuickCheck >=2.15 && <2.16,
        integer-gmp >=1.1 && <1.2,
        faberge-easter-eggs-crush-test-linear
