cabal-version: 3.0
name:          challenge
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  Huffman
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2,
        containers >=0.6.7 && <0.7

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    HuffmanSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2,
        hspec >=2.11 && <2.12,
        challenge

test-suite custom
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/custom
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11 && <2.12,
        challenge
