cabal-version: 3.0
name:          lambda-calculus-lists-as-folds-ii
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:
        ListsAsFolds
        Preloaded

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base >=4.18.2 && <4.19

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    ListsAsFoldsIISpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec,
        lambda-calculus-lists-as-folds-ii
