cabal-version:      3.0
name:               challenge
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MTF
    build-depends:    base ^>= 4.17.2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite sample
    import:           warnings
    default-language: Haskell2010
    other-modules:    MTFSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/sample
    main-is:          Main.hs
    build-depends:
        base ^>= 4.17.2,
        hspec >= 2.11.7 && < 2.12,
        challenge