cabal-version: 3.0
name:          challenge
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  PC
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    PCSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11.7 && <2.12,
        QuickCheck >=2.14.3 && <2.15,
        challenge
