cabal-version: 3.0
name:          recurrence-relations
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  FunctionEvaluator
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.18.2 && <4.19,
        mtl >=2.3.1 && <2.4,
        containers >=0.6.7 && <0.7

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    FunctionEvaluatorSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11 && <2.12,
        recurrence-relations
