cabal-version: 3.0
name:          sure-but-can-you-ski-i
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:
        Combinators
        PredefinedCombinators

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base >=4.18.2 && <4.19

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    CombinatorsSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11.9 && <2.12,
        QuickCheck >=2.15 && <2.16,
        sure-but-can-you-ski-i
