cabal-version: 3.0
name:          challenge
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules:  Fibonacci
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base >=4.17.2 && <4.18

test-suite sample
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sample
    other-modules:    FibonacciSpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec >=2.11.7 && <2.12,
        challenge
